--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pillow = "^10.2.0"
 pillow-pil = "^0.1.dev0"
 fontawesomefree = "^6.5.1"
 tomlkit = "^0.12.4"
+gunicorn = "^21.2.0"
 
 
 [build-system]
