Add docker-compose for orchestration

--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -14,13 +14,12 @@ http {
     include mime.types;  
 
     upstream backendserver {
-        server 172.17.0.2:8002;
+        server django-app:8002;
     }
 
     server {
         listen 80;
-        # root server/static/icons;
-        # root server/static/images;
+        server_name www.poisonfrog.dev poisonfrog.dev;
 
         location /static {
             autoindex on;
