--- a/env/production/django.env.example
+++ b/env/production/django.env.example
@@ -1,5 +1,5 @@
 SECRET_KEY=""
 DEBUG=""
-ALLOWED_HOSTS="0.0.0.0"
+ALLOWED_HOSTS="0.0.0.0, example.com"
 DJANGO_SETTINGS_MODULE="server.settings.production"
 
